# lnurl-project

./: .gitattributes  .gitignore  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
