[package]
name = "lnurl-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cln-rpc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secp256k1 = "0.29"
tokio = { version = "1", features = ["full"] }
url = "2"
ureq = { version = "2", features = ["json"] }
